welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: value lenght is not a member of Array[Int]
	 if (nums.lenght>=4){
                  ^arrayFront9:9: error: value lenght is not a member of Array[Int]
     for (i<-0 to nums.lenght -1){
                       ^