welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	 if (nums.lenght>=4){
     if(((nums(0)==9||nums(1)==9)||nums(2)==9)||nums(3)==9){
       return true
     }else{
       return false
     }
   }else{
     for (i<-0 to nums.lenght -1){
       if (nums(i)==9){
         return true
       }
     }
   }
return false
}
 

  